api/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
   name: projet-service
spec:
   type: ClusterIP   
   ports:
   - port: 8002      
     protocol: TCP   
     targetPort: 8000
   selector:
     app: proj-api
