api/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projet-ingress
spec:
  defaultBackend:
    service:
      name: projet-service
      port:
        number: 8002
